Added pycache to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 2d_platformer/my_env/
 2d_platformer/__pycache__/
+2d_platformer/__pycache__/level.cpython-310.pyc
+2d_platformer/__pycache__/settings.cpython-310.pyc
+2d_platformer/__pycache__/tiles.cpython-310.pyc
